<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="HardcodedText">

    <item
        android:id="@+id/home"
        android:contentDescription="content_description_home"
        android:icon="@drawable/ic_home"
        android:title="@string/home"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/music"
        android:contentDescription="content_description_music"
        android:icon="@drawable/ic_music"
        android:title="@string/music"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/bible"
        android:contentDescription="content_description_bible"
        android:icon="@drawable/ic_bible"
        android:title="@string/bible"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/annotation"
        android:contentDescription="content_description_annotation"
        android:icon="@drawable/ic_annotation"
        android:title="@string/annotation"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/info"
        android:contentDescription="content_description_info"
        android:icon="@drawable/ic_info"
        android:title="@string/info"
        app:showAsAction="ifRoom" />

</menu>